[package]
name = "chatgpt"
version = "0.0.0"
authors = ["lencx <cxin1314@gmail.com>"]
description = "ChatGPT Desktop Application"
repository = "https://github.com/lencx/ChatGPT"
license = "MIT"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0.66"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all", "devtools", "global-shortcut", "system-tray", "updater"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
log = "0.4.17"
csv = "1.1.6"
thiserror = "1.0.38"
walkdir = "2.3.2"
regex = "1.7.0"
tokio = { version = "1.23.0", features = ["macros"] }
# reqwest = "0.11.13"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "dev"
features = ["colored"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# fix: mac v1.2.0 can not copy/paste
# https://github.com/tauri-apps/tauri/issues/5669
[profile.release]
strip = true
lto = true
opt-level = "s"
